multi-port-service/http-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  selector:
    app: echo-server
  ports:
    - name: http
      port: 80
      targetPort: http-port
    - name: admin
      port: 90
      targetPort: admin-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: http-container
          image: hashicorp/http-echo:latest
          args:
            - -text="[8080] hello world..."
            - -listen=:8080
          ports:
            - containerPort: 8080
              name: http-port
        - name: admin-container
          image: hashicorp/http-echo:latest
          args:
            - -text="[9090] hello world..."
            - -listen=:9090
          ports:
            - containerPort: 9090
              name: admin-port
      serviceAccountName: echo-server
